--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -23,8 +23,8 @@
     "#Please go to developer.spotify.com and go to dashboard to register your app. Then return with your credentials\n",
     "# this part is for you to fill in with your information\n",
     "username='aryaj-3'\n",
-    "client_id = '357b3092e5204e0fb349b1f7d7f64acf'\n",
-    "client_secret = '89a7e56dd54e413c81d8531742b60d6b'"
+    "client_id = '****************'",
+    "client_secret = '******************'"
    ]
   },
   {
